fix(customize.common): desactiva better defaults
fazem desaparecer o menu de importações em casos onde não há altenativas

--- a/recordm/customUI/css/_global.css
+++ b/recordm/customUI/css/_global.css
@@ -13,7 +13,11 @@
     width: -webkit-fill-available;
 } */
 
+/*
+* estes defaults não são bons pq fazem desaparecer o menu de importações onde pode não haver alternativa de acesso
+Vou desactivar isto enquanto não se repensar nputra solução
 .cob-app .nav > li > a.js-menu-rm-importer-stats,
 .cob-app .nav > li > a.js-menu-reports {
   display:none
 }
+*/
