feat: add $style[guidelines]

--- a/recordm/customUI/css/customizations.__MERGE__.css
+++ b/recordm/customUI/css/customizations.__MERGE__.css
@@ -3,4 +3,5 @@
 @import "_hidden.css";
 @import "_mobile.css";
 @import "_dualColumn.css";
-@import "_radio1line.css";
+@import "_radio.css";
+@import "_guidelines.css";
