--- a/recordm/customUI/css/_radio.css
+++ b/recordm/customUI/css/_radio.css
@@ -9,6 +9,6 @@ ol.fields>li.custom-radio-1line>table label {
 }
 
 /* For  $style[radio-fit-content] in addition to $radio */
-.cob-app .instance-detail-container div.instance-container ol.fields>li.custom-radio-compact>table td:nth-child(3) div.radiogroup {
+.cob-app .instance-detail-container div.instance-container ol.fields>li.custom-radio-fit-content>table td:nth-child(3) div.radiogroup {
     width: fit-content;
 }
