Make the radio button labels appear in the same line when in compact mode
The label of the radion button were being displayed in the next line
when the browser was the chrome

--- a/recordm/customUI/css/_dualColumn.css
+++ b/recordm/customUI/css/_dualColumn.css
@@ -6,11 +6,11 @@ li.custom-dualColumn ol.fields > li > table > tbody > tr > td:nth-child(2) {
   min-width: 160px;
 }
 li.custom-dualColumn ol.fields  li > table > tbody > tr > td:nth-child(3),
-li.custom-dualColumn ol.fields  li > table > tbody > tr > td:nth-child(3) input {
+li.custom-dualColumn ol.fields  li > table > tbody > tr > td:nth-child(3) input:not([type='radio']) {
   max-width: 230px !important;
   width: -webkit-fill-available;
 }
-  
+
 /* $style[dualColumn] */
 li.custom-dualColumn > ol.fields{
   display: flex;
