--- a/recordm/customUI/css/_radio.css
+++ b/recordm/customUI/css/_radio.css
@@ -5,7 +5,15 @@ ol.fields>li.custom-radio-1line>table label {
 
 /* For  $style[radio-compact] in addition to $radio */
 .cob-app .instance-detail-container div.instance-container ol.fields>li.custom-radio-compact>table td:nth-child(3) label {
+    margin-right: 10px;
     width: 30px;
+    display: inline-flex;
+}
+
+.cob-app .instance-detail-container div.instance-container ol.fields>li.custom-radio-compact>table td:nth-child(3) label > input {
+    margin-top: 4px;
+    width: 14px;
+    height: 14px;
 }
 
 /* For  $style[radio-fit-content] in addition to $radio */
