Remove o !important quando é dual column
Estava a bloquear a capacidade de aumentarmos campos em overrides
especificos para clientes

--- a/recordm/customUI/css/_dualColumn.css
+++ b/recordm/customUI/css/_dualColumn.css
@@ -7,7 +7,7 @@ li.custom-dualColumn ol.fields > li > table > tbody > tr > td:nth-child(2) {
 }
 li.custom-dualColumn ol.fields  li > table > tbody > tr > td:nth-child(3),
 li.custom-dualColumn ol.fields  li > table > tbody > tr > td:nth-child(3) input:not([type='radio']) {
-  max-width: 230px !important;
+  max-width: 230px;
   width: -webkit-fill-available;
 }
 
