--- a/recordm/customUI/css/_mobile.css
+++ b/recordm/customUI/css/_mobile.css
@@ -178,6 +178,7 @@
       padding-top: 2px !important;
       padding-bottom: 2px !important;
       font-size: 1.1rem !important;
+      line-height: normal !important;
    }
 
 
