Corrige o hide toggle button nos campos que não são $group

--- a/recordm/customUI/css/_hidden.css
+++ b/recordm/customUI/css/_hidden.css
@@ -18,6 +18,7 @@
 }
 
 /* $style[hide-expand-btn] */
-.custom-hide-expand-btn > table > tbody > tr > td > div span.toggle-button {
+.custom-hide-expand-btn > table > tbody > tr > td > div span.toggle-button,
+.custom-hide-expand-btn > table > tbody > tr > td > span.toggle-button{
   display: var(--dev-inline-display, none);
 }
