--- a/recordm/customUI/css/_radio.css
+++ b/recordm/customUI/css/_radio.css
@@ -5,6 +5,7 @@
 	--radio-width-base: 30px;
     --radio-width-lg: 40px;
     --radio-width-xl: 50px;
+    --radio-width-2xl: 70px;
   }
 
 
@@ -17,6 +18,13 @@ ol.fields>li.custom-radio-1line>table label {
 .cob-app .instance-detail-container div.instance-container ol.fields>li.custom-radio-compact>table td:nth-child(3) label {
     margin-right: 10px;
     width: var(--radio-width-base);
+    display: inline-flex;
+}
+
+/* For  $style[radio-compact-2xl] in addition to $radio */
+.cob-app .instance-detail-container div.instance-container ol.fields>li.custom-radio-compact-2xl>table td:nth-child(3) label {
+    margin-right: 10px;
+    width: var(--radio-width-2xl);
     display: inline-flex;
 }
 
